<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/colorP"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rr.safervpn.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:ems="10"
        android:alpha="0.50"
        android:drawableLeft="@drawable/ic_action_name3"
        android:background="@color/colorP1"
        android:text="@string/input_hint_text2"
        android:id="@+id/editText2"
        android:layout_marginBottom="93dp"
        android:layout_above="@+id/button"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:id="@+id/button"
        android:background="@color/colorPrimaryDark"
        android:alpha="0.85"
        android:layout_above="@+id/editText3"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginBottom="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:background="@color/colorAccent1"
        android:text="@string/edit_text"
        android:alpha="0.65"

        android:gravity="center_vertical"
        android:layout_above="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/editText4"
        android:text="@string/edit_text2"
        android:gravity="center"
        android:layout_above="@+id/button2"
        android:textColor="@color/colorP1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_text2"
        android:id="@+id/button2"
        android:background="@color/colorAccent1"
        android:shadowColor="@color/colorP"
        android:alpha="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:text="@string/input_hint_text"
        android:background="@color/colorP1"
        android:drawableLeft="@drawable/ic_action_name1"
        android:gravity="center_vertical"
        android:ems="10"

        android:id="@+id/editText"
        android:alpha="0.50"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />


</RelativeLayout>
